--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# DB settings
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_NAME=root
+
+# JWT settings
+JWT_SECRET_KEY="secretKEY"
+JWT_SECRET_KEY_EXPIRE_MINUTES_COUNT=15
