--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,8 @@ fabric.properties
 # Azure Toolkit for IntelliJ plugin
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
+
+# Air
+air.toml
+tmp
+tmp/
